Fix some issues on mobile view

--- a/src/style.scss
+++ b/src/style.scss
@@ -151,10 +151,9 @@ footer {
 
 .footer-mobile {
   @include for-phone-only {
-    position: -webkit-sticky;
-    position: sticky;
-    left: 0;
-    top: 0;
+    position: absolute;
+    height: auto;
+    bottom: 0;
     width: 100%;
   }
 }
@@ -631,6 +630,7 @@ hr.hr-timeline {
   margin-top: -1em;
   z-index: -3;
   width: 100%;
+  height: 100%;
   position: relative;
 }
 
@@ -684,7 +684,7 @@ hr.hr-timeline {
   margin-left: 0;
 
   @include for-phone-only {
-    margin-top: 8.5em;
+    margin-top: 7em;
     font-size: 0.65em;
     width: 80%;
     margin-left: 5%;
